test/corpus/SimpleFunc.txt
================================================================================
Simple Function
================================================================================
foo(x: Int): Int = x + 3;
--------------------------------------------------------------------------------

(source_file
  (any_dec
    (var_dec
      (low_ident)
      (starts_with_parens_expr
        (parens_expr
          (no_brackets_parens_expr
            (inner_expr
              (bind
                (any_ident
                  (low_ident))
                (bind_op)
                (expr
                  (any_ident
                    (up_ident))))))))
      (expr
        (any_ident
          (up_ident)))
      (expr
        (op_app
          (expr
            (any_ident
              (low_ident)))
          (op
            (op_ident))
          (expr
            (int_lit)))))))
