test/corpus/Utilities.txt
================================================================================
Utilities
================================================================================
// From the Utilities section of the spec

do(f: () -> t): t = f();

foo(x: Int, y: Int): Int = do {
    z := x * 3;
    w := y - 2;
    (z * z + w) / (x + w)
};

if[t: Type](c: Bool, e: () -> t): Maybe(t) = with(c) {
| True  -> Just(e()),
| False -> Nothing
};

elif[t: Type](x: Maybe(t), c: Bool, e: () -> t): Maybe(t) = with(x, c) {
| Just(y), _     -> x,
| Nothing, True  -> Just(e()),
| Nothing, False -> Nothing,
};

else[t: Type](x: Maybe(t), e: () -> t): t = with(x) {
| Just(y) -> y,
| Nothing -> e()
};

_ := if(True) {
    "Case one!"
}.elif(False) {
    "Case two!"
}.else {
    "Case three!"
};

fun[r: Type](t: Type, f: t -> r): t -> r = f;

lazy[t: Type](f: () -> t): () -> t = f;

the(x: t, t: Type): t = x;

with[t: Type, r: Type](x: t, f: t -> r): r = f(x);

also[t: Type, m: Applicative](x: t, f: t -> m()): m(t) = f(x) $> x;

_ := with(x) {
| 0 -> "Zero!",
| 1 -> "One!",
| _ -> "Other!"
};
--------------------------------------------------------------------------------

(source_file
  (any_dec
    (var_dec
      (low_ident)
      (starts_with_parens_expr
        (parens_expr
          (no_brackets_parens_expr
            (inner_expr
              (bind
                (pat
                  (any_ident
                    (low_ident)))
                (bind_op)
                (expr
                  (op_app
                    (expr
                      (no_brackets_parens_expr))
                    (op
                      (op_ident))
                    (expr
                      (any_ident
                        (low_ident))))))))))
      (expr
        (any_ident
          (low_ident)))
      (expr
        (fun_app
          (expr
            (any_ident
              (low_ident)))
          (parens_expr
            (no_brackets_parens_expr))))))
  (any_dec
    (var_dec
      (low_ident)
      (starts_with_parens_expr
        (parens_expr
          (no_brackets_parens_expr
            (inner_expr
              (bind
                (pat
                  (any_ident
                    (low_ident)))
                (bind_op)
                (expr
                  (any_ident
                    (up_ident))))
              (bind
                (pat
                  (any_ident
                    (low_ident)))
                (bind_op)
                (expr
                  (any_ident
                    (up_ident))))))))
      (expr
        (any_ident
          (up_ident)))
      (expr
        (fun_app
          (expr
            (any_ident
              (low_ident)))
          (block
            (blockContent
              (var_dec
                (any_ident
                  (low_ident))
                (expr
                  (op_app
                    (expr
                      (any_ident
                        (low_ident)))
                    (op
                      (op_ident))
                    (expr
                      (int_lit)))))
              (var_dec
                (any_ident
                  (low_ident))
                (expr
                  (op_app
                    (expr
                      (any_ident
                        (low_ident)))
                    (op
                      (op_ident))
                    (expr
                      (int_lit)))))
              (expr
                (op_app
                  (expr
                    (no_brackets_parens_expr
                      (inner_expr
                        (expr
                          (op_app
                            (expr
                              (op_app
                                (expr
                                  (any_ident
                                    (low_ident)))
                                (op
                                  (op_ident))
                                (expr
                                  (any_ident
                                    (low_ident)))))
                            (op
                              (op_ident))
                            (expr
                              (any_ident
                                (low_ident))))))))
                  (op
                    (op_ident))
                  (expr
                    (no_brackets_parens_expr
                      (inner_expr
                        (expr
                          (op_app
                            (expr
                              (any_ident
                                (low_ident)))
                            (op
                              (op_ident))
                            (expr
                              (any_ident
                                (low_ident))))))))))))))))
  (any_dec
    (var_dec
      (low_ident)
      (starts_with_parens_expr
        (parens_expr
          (brackets_expr
            (inner_expr
              (bind
                (pat
                  (any_ident
                    (low_ident)))
                (bind_op)
                (expr
                  (any_ident
                    (up_ident))))))
          (no_brackets_parens_expr
            (inner_expr
              (bind
                (pat
                  (any_ident
                    (low_ident)))
                (bind_op)
                (expr
                  (any_ident
                    (up_ident))))
              (bind
                (pat
                  (any_ident
                    (low_ident)))
                (bind_op)
                (expr
                  (op_app
                    (expr
                      (no_brackets_parens_expr))
                    (op
                      (op_ident))
                    (expr
                      (any_ident
                        (low_ident))))))))))
      (expr
        (fun_app
          (expr
            (any_ident
              (up_ident)))
          (parens_expr
            (no_brackets_parens_expr
              (inner_expr
                (expr
                  (any_ident
                    (low_ident))))))))
      (expr
        (fun_app
          (expr
            (fun_app
              (expr
                (any_ident
                  (low_ident)))
              (parens_expr
                (no_brackets_parens_expr
                  (inner_expr
                    (expr
                      (any_ident
                        (low_ident))))))))
          (block
            (inner_pat
              (pat_elem
                (disambig_pat
                  (up_ident))))
            (blockContent
              (expr
                (fun_app
                  (expr
                    (any_ident
                      (up_ident)))
                  (parens_expr
                    (no_brackets_parens_expr
                      (inner_expr
                        (expr
                          (fun_app
                            (expr
                              (any_ident
                                (low_ident)))
                            (parens_expr
                              (no_brackets_parens_expr))))))))))
            (inner_pat
              (pat_elem
                (disambig_pat
                  (up_ident))))
            (blockContent
              (expr
                (any_ident
                  (up_ident)))))))))
  (any_dec
    (var_dec
      (low_ident)
      (starts_with_parens_expr
        (parens_expr
          (brackets_expr
            (inner_expr
              (bind
                (pat
                  (any_ident
                    (low_ident)))
                (bind_op)
                (expr
                  (any_ident
                    (up_ident))))))
          (no_brackets_parens_expr
            (inner_expr
              (bind
                (pat
                  (any_ident
                    (low_ident)))
                (bind_op)
                (expr
                  (fun_app
                    (expr
                      (any_ident
                        (up_ident)))
                    (parens_expr
                      (no_brackets_parens_expr
                        (inner_expr
                          (expr
                            (any_ident
                              (low_ident)))))))))
              (bind
                (pat
                  (any_ident
                    (low_ident)))
                (bind_op)
                (expr
                  (any_ident
                    (up_ident))))
              (bind
                (pat
                  (any_ident
                    (low_ident)))
                (bind_op)
                (expr
                  (op_app
                    (expr
                      (no_brackets_parens_expr))
                    (op
                      (op_ident))
                    (expr
                      (any_ident
                        (low_ident))))))))))
      (expr
        (fun_app
          (expr
            (any_ident
              (up_ident)))
          (parens_expr
            (no_brackets_parens_expr
              (inner_expr
                (expr
                  (any_ident
                    (low_ident))))))))
      (expr
        (fun_app
          (expr
            (fun_app
              (expr
                (any_ident
                  (low_ident)))
              (parens_expr
                (no_brackets_parens_expr
                  (inner_expr
                    (expr
                      (any_ident
                        (low_ident)))
                    (expr
                      (any_ident
                        (low_ident))))))))
          (block
            (inner_pat
              (pat_elem
                (disambig_pat
                  (up_ident)
                  (parens_pat
                    (inner_pat
                      (pat_elem
                        (low_ident))))))
              (pat_elem
                (disambig_pat)))
            (blockContent
              (expr
                (any_ident
                  (low_ident))))
            (inner_pat
              (pat_elem
                (disambig_pat
                  (up_ident)))
              (pat_elem
                (disambig_pat
                  (up_ident))))
            (blockContent
              (expr
                (fun_app
                  (expr
                    (any_ident
                      (up_ident)))
                  (parens_expr
                    (no_brackets_parens_expr
                      (inner_expr
                        (expr
                          (fun_app
                            (expr
                              (any_ident
                                (low_ident)))
                            (parens_expr
                              (no_brackets_parens_expr))))))))))
            (inner_pat
              (pat_elem
                (disambig_pat
                  (up_ident)))
              (pat_elem
                (disambig_pat
                  (up_ident))))
            (blockContent
              (expr
                (any_ident
                  (up_ident)))))))))
  (any_dec
    (var_dec
      (low_ident)
      (starts_with_parens_expr
        (parens_expr
          (brackets_expr
            (inner_expr
              (bind
                (pat
                  (any_ident
                    (low_ident)))
                (bind_op)
                (expr
                  (any_ident
                    (up_ident))))))
          (no_brackets_parens_expr
            (inner_expr
              (bind
                (pat
                  (any_ident
                    (low_ident)))
                (bind_op)
                (expr
                  (fun_app
                    (expr
                      (any_ident
                        (up_ident)))
                    (parens_expr
                      (no_brackets_parens_expr
                        (inner_expr
                          (expr
                            (any_ident
                              (low_ident)))))))))
              (bind
                (pat
                  (any_ident
                    (low_ident)))
                (bind_op)
                (expr
                  (op_app
                    (expr
                      (no_brackets_parens_expr))
                    (op
                      (op_ident))
                    (expr
                      (any_ident
                        (low_ident))))))))))
      (expr
        (any_ident
          (low_ident)))
      (expr
        (fun_app
          (expr
            (fun_app
              (expr
                (any_ident
                  (low_ident)))
              (parens_expr
                (no_brackets_parens_expr
                  (inner_expr
                    (expr
                      (any_ident
                        (low_ident))))))))
          (block
            (inner_pat
              (pat_elem
                (disambig_pat
                  (up_ident)
                  (parens_pat
                    (inner_pat
                      (pat_elem
                        (low_ident)))))))
            (blockContent
              (expr
                (any_ident
                  (low_ident))))
            (inner_pat
              (pat_elem
                (disambig_pat
                  (up_ident))))
            (blockContent
              (expr
                (fun_app
                  (expr
                    (any_ident
                      (low_ident)))
                  (parens_expr
                    (no_brackets_parens_expr))))))))))
  (any_dec
    (var_dec
      (irrefutable_match
        (disambig_pat))
      (expr
        (op_app
          (expr
            (op_app
              (expr
                (fun_app
                  (expr
                    (fun_app
                      (expr
                        (any_ident
                          (low_ident)))
                      (parens_expr
                        (no_brackets_parens_expr
                          (inner_expr
                            (expr
                              (any_ident
                                (up_ident))))))))
                  (block
                    (blockContent
                      (expr
                        (str_lit))))))
              (op
                (op_ident))
              (expr
                (fun_app
                  (expr
                    (fun_app
                      (expr
                        (any_ident
                          (low_ident)))
                      (parens_expr
                        (no_brackets_parens_expr
                          (inner_expr
                            (expr
                              (any_ident
                                (up_ident))))))))
                  (block
                    (blockContent
                      (expr
                        (str_lit))))))))
          (op
            (op_ident))
          (expr
            (fun_app
              (expr
                (any_ident
                  (low_ident)))
              (block
                (blockContent
                  (expr
                    (str_lit))))))))))
  (any_dec
    (var_dec
      (low_ident)
      (starts_with_parens_expr
        (parens_expr
          (brackets_expr
            (inner_expr
              (bind
                (pat
                  (any_ident
                    (low_ident)))
                (bind_op)
                (expr
                  (any_ident
                    (up_ident))))))
          (no_brackets_parens_expr
            (inner_expr
              (bind
                (pat
                  (any_ident
                    (low_ident)))
                (bind_op)
                (expr
                  (any_ident
                    (up_ident))))
              (bind
                (pat
                  (any_ident
                    (low_ident)))
                (bind_op)
                (expr
                  (op_app
                    (expr
                      (any_ident
                        (low_ident)))
                    (op
                      (op_ident))
                    (expr
                      (any_ident
                        (low_ident))))))))))
      (expr
        (op_app
          (expr
            (any_ident
              (low_ident)))
          (op
            (op_ident))
          (expr
            (any_ident
              (low_ident)))))
      (expr
        (any_ident
          (low_ident)))))
  (any_dec
    (var_dec
      (low_ident)
      (starts_with_parens_expr
        (parens_expr
          (brackets_expr
            (inner_expr
              (bind
                (pat
                  (any_ident
                    (low_ident)))
                (bind_op)
                (expr
                  (any_ident
                    (up_ident))))))
          (no_brackets_parens_expr
            (inner_expr
              (bind
                (pat
                  (any_ident
                    (low_ident)))
                (bind_op)
                (expr
                  (op_app
                    (expr
                      (no_brackets_parens_expr))
                    (op
                      (op_ident))
                    (expr
                      (any_ident
                        (low_ident))))))))))
      (expr
        (op_app
          (expr
            (no_brackets_parens_expr))
          (op
            (op_ident))
          (expr
            (any_ident
              (low_ident)))))
      (expr
        (any_ident
          (low_ident)))))
  (any_dec
    (var_dec
      (low_ident)
      (starts_with_parens_expr
        (parens_expr
          (no_brackets_parens_expr
            (inner_expr
              (bind
                (pat
                  (any_ident
                    (low_ident)))
                (bind_op)
                (expr
                  (any_ident
                    (low_ident))))
              (bind
                (pat
                  (any_ident
                    (low_ident)))
                (bind_op)
                (expr
                  (any_ident
                    (up_ident))))))))
      (expr
        (any_ident
          (low_ident)))
      (expr
        (any_ident
          (low_ident)))))
  (any_dec
    (var_dec
      (low_ident)
      (starts_with_parens_expr
        (parens_expr
          (brackets_expr
            (inner_expr
              (bind
                (pat
                  (any_ident
                    (low_ident)))
                (bind_op)
                (expr
                  (any_ident
                    (up_ident))))
              (bind
                (pat
                  (any_ident
                    (low_ident)))
                (bind_op)
                (expr
                  (any_ident
                    (up_ident))))))
          (no_brackets_parens_expr
            (inner_expr
              (bind
                (pat
                  (any_ident
                    (low_ident)))
                (bind_op)
                (expr
                  (any_ident
                    (low_ident))))
              (bind
                (pat
                  (any_ident
                    (low_ident)))
                (bind_op)
                (expr
                  (op_app
                    (expr
                      (any_ident
                        (low_ident)))
                    (op
                      (op_ident))
                    (expr
                      (any_ident
                        (low_ident))))))))))
      (expr
        (any_ident
          (low_ident)))
      (expr
        (fun_app
          (expr
            (any_ident
              (low_ident)))
          (parens_expr
            (no_brackets_parens_expr
              (inner_expr
                (expr
                  (any_ident
                    (low_ident))))))))))
  (any_dec
    (var_dec
      (low_ident)
      (starts_with_parens_expr
        (parens_expr
          (brackets_expr
            (inner_expr
              (bind
                (pat
                  (any_ident
                    (low_ident)))
                (bind_op)
                (expr
                  (any_ident
                    (up_ident))))
              (bind
                (pat
                  (any_ident
                    (low_ident)))
                (bind_op)
                (expr
                  (any_ident
                    (up_ident))))))
          (no_brackets_parens_expr
            (inner_expr
              (bind
                (pat
                  (any_ident
                    (low_ident)))
                (bind_op)
                (expr
                  (any_ident
                    (low_ident))))
              (bind
                (pat
                  (any_ident
                    (low_ident)))
                (bind_op)
                (expr
                  (op_app
                    (expr
                      (any_ident
                        (low_ident)))
                    (op
                      (op_ident))
                    (expr
                      (fun_app
                        (expr
                          (any_ident
                            (low_ident)))
                        (parens_expr
                          (no_brackets_parens_expr)))))))))))
      (expr
        (fun_app
          (expr
            (any_ident
              (low_ident)))
          (parens_expr
            (no_brackets_parens_expr
              (inner_expr
                (expr
                  (any_ident
                    (low_ident))))))))
      (expr
        (op_app
          (expr
            (fun_app
              (expr
                (any_ident
                  (low_ident)))
              (parens_expr
                (no_brackets_parens_expr
                  (inner_expr
                    (expr
                      (any_ident
                        (low_ident))))))))
          (op
            (op_ident))
          (expr
            (any_ident
              (low_ident)))))))
  (any_dec
    (var_dec
      (irrefutable_match
        (disambig_pat))
      (expr
        (fun_app
          (expr
            (fun_app
              (expr
                (any_ident
                  (low_ident)))
              (parens_expr
                (no_brackets_parens_expr
                  (inner_expr
                    (expr
                      (any_ident
                        (low_ident))))))))
          (block
            (inner_pat
              (pat_elem
                (disambig_pat
                  (int_lit))))
            (blockContent
              (expr
                (str_lit)))
            (inner_pat
              (pat_elem
                (disambig_pat
                  (int_lit))))
            (blockContent
              (expr
                (str_lit)))
            (inner_pat
              (pat_elem
                (disambig_pat)))
            (blockContent
              (expr
                (str_lit)))))))))
